--- a/_posts/DesignPattern/2016-03-24-MVC.md
+++ b/_posts/DesignPattern/2016-03-24-MVC.md
@@ -19,4 +19,4 @@ Modle-View-Controller is the concept introduced by smalltalk of encapsulating **
 
 The central component of MVC, *the model*, capatures the behavior of the application in terms of its `problem domain`, independent of *presentation*.
 
-### interactions
+### interaction
